# MLonMCU

ex9/task/kws-on-gap9/: .gitignore  .gitmodules  README.md  config_env.json  config_net_pact_8b.json  config_net_tqt_8b.json  datagenerator.py  dataset.py  deploy.sh  dory_gen.sh  dscnn.py  environment.yml  model_int.pth  model_uint.pth  openocd.sh  original.yml  pactnet.py  quant.py  quantUtils.py  quantize.py  test.py  utils.py
ex9/task/kws-on-gap9/application/: CMakeLists.txt  Graph.src  Kconfig  MfccConfig.json  MfccModel.c  MfccModel.mk  application.c  application.h  dac.c  input.h  localutil.c  localutil.h  sdk.config
ex9/task/kws-on-gap9/dory/: .gitignore  network_generate.py
ex9/task/kws-on-gap9/dory/dory/Frontend_frameworks/NEMO/: Parser.py
ex9/task/kws-on-gap9/dory/dory/Frontend_frameworks/Quantlab/: Parser.py
ex9/task/kws-on-gap9/dory/dory/Hardware_targets/PULP/Backend_Kernels/: BackendKernelsAdapter.py
ex9/task/kws-on-gap9/dory/dory/Hardware_targets/PULP/GAP8_L2/: HW_description.json
ex9/task/kws-on-gap9/dory/dory/Hardware_targets/PULP/GAP8_L2/Templates/: main_template.c
ex9/task/kws-on-gap9/dory/dory/Hardware_targets/PULP/GAP9/Templates/: network_c_template.c
ex9/task/kws-on-gap9/dory/dory/Hardware_targets/PULP/GAP9_NE16/Templates/: network_c_template.c  network_h_template.h
ex9/task/kws-on-gap9/dory/dory/Hardware_targets/PULP/GAP9_NE16/Templates/layer_templates/: layer_L2_c_conv_ne16_multicore_template.c  layer_L2_c_conv_ne16_singlecore_naive.c
ex9/task/kws-on-gap9/dory/dory/Hardware_targets/PULP/PULP_gvsoc/Templates/: network_c_template.c
ex9/task/kws-on-gap9/dory/dory/Parsers/: Parser_ONNX_to_DORY.py
ex9/task/kws-on-gap9/dory/dory/Utils/Templates_writer/: Network_template_writer.py
ex9/task/kws-on-gap9/dory/generate_DORY/: vars.mk
ex9/task/kws-on-gap9/dory/generate_DORY/hex/: BNReluConvolution0_weights.hex  BNReluConvolution1_weights.hex  BNReluConvolution2_weights.hex  BNReluConvolution3_weights.hex  BNReluConvolution4_weights.hex  BNReluConvolution5_weights.hex  BNReluConvolution6_weights.hex  BNReluConvolution7_weights.hex  BNReluConvolution8_weights.hex  FullyConnected10_weights.hex  inputs.hex
ex9/task/kws-on-gap9/dory/generate_DORY/inc/: BNReluConvolution2.h  BNReluConvolution5.h  BNReluConvolution6.h  BNReluConvolution7.h  BNReluConvolution8.h  FullyConnected10.h  Pooling9.h  network.h
ex9/task/kws-on-gap9/dory/generate_DORY/src/: BNReluConvolution0.c  BNReluConvolution1.c  BNReluConvolution2.c  BNReluConvolution3.c  BNReluConvolution4.c  BNReluConvolution5.c  BNReluConvolution6.c  BNReluConvolution7.c  BNReluConvolution8.c  FullyConnected10.c  Pooling9.c  main.c  network.c
ex9/task/kws-on-gap9/quantlib/backends/dory/: pact_export.py
